# pysndlib

./: .gitignore  README.md  clm_ins.py  env.py  examples.py  generaluser.php  generators.py  jcrev.py  pyproject.toml  pysndlib.py  requirements.txt  setup.py  sndlib  sndlib.py
.github/workflows/: build-wheels.yml  main.yml  python-package.yml  test-env-main.yml  test.yml
demos/: from_sndclm.py  libc_s7.c  viols_musx.py
docs/: basic_usage.html  building.html  clm_enums.html  clm_generators.html  clm_init.html  clm_utility_functions.html  description.html  file_IO.html  genindex.html  index.html  installation.html  modules.rst  mus_any.html  objects.inv  other_generators.html  py-modindex.html  pysndlib.rst  readme.html  search.html  searchindex.js  sndlib_enums.html  sndlib_functions.html  with_sound.html
docs/_sources/: clm_enums.rst  clm_generators.rst  clm_utility_functions.rst  file_IO.rst  mus_any.rst  sndlib_functions.rst  with_sound.rst
docs/source/: basic_usage.rst  clm_enums.rst  clm_generators.rst  clm_init.rst  clm_utility_functions.rst  conf.py  description.rst  file_IO.rst  index.rst  mus_any.rst  other_generators.rst  readme.rst  sndlib_functions.rst  with_sound.rst
examples/: examples.py  scratch.py
notebooks/: 01_Basic.ipynb
pysndlib/: __init__.py  analog_filter.py  clm_ins.py  dsp.py  env.py  generators.py  jcrev.py  musx.py  pysndlib.py
pysndlib.docset/Contents/: Info.plist
pysndlib/ins/: clm_ins.py
pysndlib/internals/: clm.py  enums.py  mus_any_pointer.py  sndlib.py  utils.py
src/pysndlib/: __init__.py  clm.pxd  (+32 more)
test/: test_clm.py
(+92 files in other folders)
