[project]
name = "pysndlib"
version = "0.5.5"
authors = [
  { name="Todd Ingalls", email="testcase@asu.edu" },
]
description = "A python wrapper around sndlib"
dependencies = ["numpy", "Cython>=3.0.0"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/testcase/pysndlib"
"Bug Tracker" = "https://github.com/testcase/pysndlib/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]



